# mcp-search

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
mcp_search/: __init__.py  crawler.py  db.py  embedder.py  models.py  search.py  server.py  settings.py
scripts/: ingest_initial_list.py
